feat (r3-corda-ent): enable platform deployment via ansible-server
This commit introduces support for deploying a decentralized ledger technology (DLT) network using Ansible automation.

Updated the Ansible codebase to support network deployment in respect of the standalone Helm chart

The following Ansible roles have been introduced to appropriately deploy the network of one organization only: 1. initlize the organization 2. setup cenm 3. setup notary 4. setup networkmap

updated the sample network configuration file to provide information on which networks can be deployed using this file

fixes #2548

Signed-off-by: saikumarbommakanti <sai.kumar.bommakanti@accenture.com>

--- a/platforms/r3-corda-ent/charts/cenm-networkmap/templates/service.yaml
+++ b/platforms/r3-corda-ent/charts/cenm-networkmap/templates/service.yaml
@@ -47,7 +47,7 @@ kind: Host
 metadata:
   name: {{ .Release.Name }}-nms
 spec:
-  hostname: cenm-nms.{{ .Values.global.proxy.externalUrlSuffix }}
+  hostname: {{ .Values.cenm.prefix }}-nms.{{ .Values.global.proxy.externalUrlSuffix }}
   acmeProvider:
     authority: none
   requestPolicy:
@@ -64,7 +64,7 @@ metadata:
   name: {{ .Release.Name }}-mapping
   namespace: {{ .Release.Namespace }}
 spec:
-  host: cenm-nms.{{ .Values.global.proxy.externalUrlSuffix }}
+  host: {{ .Values.cenm.prefix }}-nms.{{ .Values.global.proxy.externalUrlSuffix }}
   prefix: /
   service: {{ include "networkmap.name" . }}.{{ .Release.Namespace }}:{{ .Values.global.cenm.networkmap.port }}
 {{- end }}
