[fabric] Update ansible playbooks for create a channel
**Primary Changes**

1.Deploy fabric 2.5.4 with channel using ansible.
2.Deploy fabric 2.2.2 with channel using ansible.

fixes #2576

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
+++ b/platforms/shared/configuration/roles/create/job_component/vars/main.yaml
@@ -9,6 +9,10 @@ job_templates:
   secondary_genesis: secondary_genesis.tpl
   primary_init: primary_init.tpl
   secondary_init: secondary_init.tpl
+  fabric_genesis: fabric_genesis.tpl
+  osn_create_channel_job: osn_create_channel_job.tpl
+  create_channel_job: create_channel_job.tpl
+  join_channel_job: join_channel_job.tpl
   indy_genesis: indy_genesis.tpl
   indy_endorser: indy_endorser.tpl
   corda_ent_init: corda_ent_init.tpl
@@ -18,6 +22,15 @@ charts:
   secondary_genesis: "{{ network.type }}-genesis"
   primary_init: corda-init
   secondary_init: corda-init
+  fabric_genesis: fabric-genesis
+  osn_create_channel_job: fabric-osnadmin-channel-create
+  create_channel_job: fabric-channel-create
+  join_channel_job: fabric-channel-join
+
+bevel_alpine_version: latest
+fabric_tools_image: bevel-fabric-tools
+indy_genesis: indy-genesis
+indy_endorser: indy-register-identity
   indy_genesis: indy-genesis
   indy_endorser: indy-register-identity
   corda_ent_init: enterprise-init
