[docs] Updated for latest release
Signed-off-by: sownak.roy <sownak.roy@amag2d2w93xrv.home>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -92,10 +92,10 @@ nav:
   - Concepts:
     - Sequence Diagram: concepts/sequence-diagram.md
     - Features: concepts/features.md
-    - Ansible: concepts/ansible.md
-    - Gitops: concepts/gitops.md
     - Helm: concepts/helm.md
     - Kubernetes: concepts/kubernetes.md
+    - Ansible: concepts/ansible.md
+    - Gitops: concepts/gitops.md
     - Vault: concepts/vault.md
   - Getting Started:
     - Pre-requisites: getting-started/prerequisites.md
@@ -103,7 +103,7 @@ nav:
     - Configure pre-requisites: getting-started/configure-prerequisites.md
     - Running: getting-started/run-bevel.md
   - Tutorials:
-    - Tutorial List: tutorials/index.md
+    - Tutorials: tutorials/index.md
     - Developer pre-requisites: tutorials/dev-prereq.md
     - Deploy using Docker: tutorials/docker-deploy.md
     - Deploy using Machine: tutorials/machine-deploy.md
