[fabric] Update ansible playbooks add-peer and add-cli **Primary Changes**
1 .Updated playbook platforms/hyperledger-fabric/configuration/add-cli.yaml
2. Updated playbook platforms/hyperledger-fabric/configuration/add-peer.yaml
3. Added the component_dir field to the gitops section. This directory stores the values.yaml files created with the role platforms/shared/configuration/roles/create/job_component because storing them in the same directory as the flux manifests causes incompatibility.

fixes #2584

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/anchorpeer.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/anchorpeer.yaml
@@ -3,7 +3,7 @@
 #
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
-{{- if eq .Values.peer.type "anchor" }}
+{{- if and (eq .Values.peer.type "anchor") (not .Values.peer.addPeerValue) }}
 apiVersion: batch/v1
 kind: Job
 metadata:
