--- a/platforms/hyperledger-fabric/configuration/roles/create/genesis/tasks/valuefile.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/create/genesis/tasks/valuefile.yaml
@@ -11,7 +11,7 @@
     kubernetes: "{{ org.k8s }}"
     vault: "{{ org.vault }}"
     charts_dir: "{{ org.gitops.chart_source }}"
-    values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ org.name | lower }}"
+    values_dir: "{{playbook_dir}}/../../../{{org.gitops.component_dir}}/{{ org.name | lower }}"
     generateGenisisBLock: "{{ generateGenisis }}"
 
 # Git Push: Push the above generated files to git directory 
