--- a/platforms/hyperledger-fabric/configuration/roles/create/channels_join/tasks/nested_channel_join.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/create/channels_join/tasks/nested_channel_join.yaml
@@ -20,6 +20,12 @@
     - participant.type == 'creator' and ('2.2.' in network.version or '1.4.' in network.version)
     - participant.org_status is not defined or participant.org_status == 'new'
 
+# Set Variable charts_dir
+- name: "Set Variable charts_dir"
+  set_fact:
+    charts_dir: "{{ org.gitops.chart_source }}"
+  when: charts_dir is undefined
+
 # Get anchortx file from configmap obtener los datos del ordener en un task a aprte y despeus ahcer esto
 - name: Get anchortx file from config map 
   kubernetes.core.k8s_info:
@@ -72,7 +78,8 @@
     charts_dir: "{{ org.gitops.chart_source }}"
     vault: "{{ org.vault }}"
     k8s: "{{ org.k8s }}"
-    values_dir: "{{playbook_dir}}/../../../{{org.gitops.release_dir}}/{{ org.name | lower }}"
+    add_peer_value: "{{ add_peer | default('false') }}"
+    values_dir: "{{playbook_dir}}/../../../{{org.gitops.component_dir}}/{{ org.name | lower }}"
   loop: "{{ participant.peers }}"
   loop_control:
     loop_var: peer
