[fabric] Update ansible playbooks add-organization
**Primary Changes**

1 .Updated playbook platforms/hyperledger-fabric/configuration/network-fabric-add-organization.yaml to add organizations that only have peers

fixes #2599

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/anchorpeer.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/anchorpeer.yaml
@@ -3,7 +3,7 @@
 #
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
-{{- if and (eq .Values.peer.type "anchor") (not .Values.peer.addPeerValue) }}
+{{- if and (eq .Values.peer.type "anchor") (not .Values.peer.addPeerValue) (not .Values.peer.addnewOrgValue) }}
 apiVersion: batch/v1
 kind: Job
 metadata:
