--- a/platforms/hyperledger-fabric/configuration/roles/create/channels_join/tasks/nested_channel_join.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/create/channels_join/tasks/nested_channel_join.yaml
@@ -79,6 +79,7 @@
     vault: "{{ org.vault }}"
     k8s: "{{ org.k8s }}"
     add_peer_value: "{{ add_peer | default('false') }}"
+    add_new_org_value: "{{ add_new_org | default('false') }}"
     values_dir: "{{playbook_dir}}/../../../{{org.gitops.component_dir}}/{{ org.name | lower }}"
   loop: "{{ participant.peers }}"
   loop_control:
