--- a/platforms/hyperledger-fabric/configuration/roles/create/genesis/tasks/valuefile.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/create/genesis/tasks/valuefile.yaml
@@ -13,6 +13,7 @@
     charts_dir: "{{ org.gitops.chart_source }}"
     values_dir: "{{playbook_dir}}/../../../{{org.gitops.component_dir}}/{{ org.name | lower }}"
     generateGenisisBLock: "{{ generateGenisis }}"
+    add_org: "{{ add_new_org | default(false) }}"
 
 # Git Push: Push the above generated files to git directory 
 - name: Git Push
